# llm-agent-desktop-gui

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/llm_agent_gui/: agent.py  app.py  characters.json  games.py  llm_backend.py  memory.py
src/llm_agent_gui/utils/: character_sessions.py  format_messages.py  prompts.py
test/unit/: test_memory.py
test/unit/utils/: test_format_messages.py
